Fix overlapping with the display card

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -21,7 +21,9 @@
 }
 
 .display-img {
-  max-width: 200px;
+  max-width: 150px;
+  border: 3px solid var(--color-black);
+  border-radius: 20px;
 }
 
 .display-img:hover {
@@ -37,4 +39,11 @@
 .review-card:hover {
   transform: scale(1.1);
   transition: all .2s linear;
+}
+
+@media only screen and (min-width: 36em) {
+
+  .display-img {
+    max-width: 200px;
+  }
 }
